--- a/src/css/pagina.css
+++ b/src/css/pagina.css
@@ -68,10 +68,16 @@
     margin-top: 10px;
     border: solid;
     height: auto;
-    width: 165px;
-    padding: 5px;
+    width: 300px;
+    padding: 20px;
 }
-.estadistica{
-    justify-content: space-around;
+.p_s{
+    display: flex;
+    justify-content: space-between;
+    margin-top: 5px;
+}
+.div_s{
+    background-color: rgb(0, 221, 255);
+    justify-content: right;
     display: flex;
 }
